--- a/style.css
+++ b/style.css
@@ -36,9 +36,9 @@ body{
 .password-container{
     flex-direction: row;
     margin: 20px;
-    border: 1px solid black;
-    border-radius: 5px;
+    border-radius: 10px;
     display: flex;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.555);
     justify-content: space-between;
     align-items: center;
 }
@@ -48,9 +48,11 @@ body{
     padding: 5px;
     font-family: "Poppins";
     font-size: 1rem;
+    z-index: -1;
     border: 0;
     outline: none;
     height: 40px;
+    border-right: 1px solid rgba(0, 0, 0, 0.418);
 }
 
 #copy-password{
@@ -63,6 +65,7 @@ body{
     padding: 5px;
     border: 0;
     transition: 0.3s ease;
+
     outline: none;
     font-size: 1.1rem;
 }
